Apply suggestion from review

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -1274,7 +1274,7 @@ keys:
                       description: MAC address limit.
                 violation:
                   type: dict
-                  description: Configure violation mode (shutdown or protect), default is 'shutdown'.
+                  description: Configure violation mode (shutdown or protect), EOS default is 'shutdown'.
                   keys:
                     mode:
                       type: str
