--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3104,19 +3104,19 @@ keys:
                       description: MAC address limit.
                 violation:
                   type: dict
-                  description: Configure violation mode (shutdown or protect), default
-                    is 'shutdown'.
+                  description: Configure violation mode (shutdown or protect), EOS
+                    default is 'shutdown'.
                   keys:
-                    protect:
-                      type: dict
-                      description: Configure port security in protect mode.
-                      keys:
-                        enabled:
-                          type: bool
-                        log:
-                          type: bool
-                          description: Log new addresses seen after limit is reached
-                            in protect mode.
+                    mode:
+                      type: str
+                      valid_values:
+                      - shutdown
+                      - protect
+                      description: Configure port security mode.
+                    protect_log:
+                      type: bool
+                      description: Log new addresses seen after limit is reached in
+                        protect mode.
                 vlan_default_mac_address_maximum:
                   type: int
                   convert_types:
