Feat(eos_designs): Implement WAN/LAN redistribution for eBGP LAN

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -16,6 +16,8 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
+ip as-path access-list AP-WAN permit 65000 any
+!
 hostname cv-pathfinder-edge
 !
 router adaptive-virtual-topology
@@ -163,9 +165,6 @@ vrf instance PROD
 !
 ip security
    !
-   ike policy DP-IKE-POLICY
-      local-id 192.168.142.1
-   !
    ike policy CP-IKE-POLICY
       local-id 192.168.142.1
    !
@@ -178,7 +177,6 @@ ip security
       pfs dh-group 14
    !
    profile DP-PROFILE
-      ike-policy DP-IKE-POLICY
       sa-policy DP-SA-POLICY
       connection start
       shared-key 7 ABCDEF1234567890666
@@ -219,6 +217,30 @@ interface Ethernet3
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.20.20.20/31
+!
+interface Ethernet52
+   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1
+   no shutdown
+   mtu 9214
+   no switchport
+   flow tracker hardware WAN-FLOW-TRACKER
+   ip address 172.17.0.1/31
+!
+interface Ethernet52.42
+   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.42_vrf_PROD
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 42
+   vrf PROD
+   ip address 172.17.0.1/31
+!
+interface Ethernet52.100
+   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.100_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 100
+   vrf IT
+   ip address 172.17.0.1/31
 !
 interface Loopback0
    description Router_ID
@@ -281,14 +303,33 @@ ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
 !
+ip extcommunity-list ECL-WAN-HA-SOO permit soo 192.168.42.1:511
+!
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny prefixes from WAN
+   match as-path AP-WAN
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Mark prefixes originated from the LAN
+   set extcommunity soo 192.168.42.1:511 additive
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+   description Advertise towards LAN the routes received locally
+   match extcommunity soo 192.168.42.1:511 additive
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
+   description Advertise towards LAN the routes received over WAN
+   match as-path AP-WAN
+!
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+   set extcommunity soo 192.168.42.1:511 additive
 !
-route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 30
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
+   match extcommunity soo 192.168.42.1:511 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -298,6 +339,11 @@ router bgp 65000
    maximum-paths 16
    update wait-install
    no bgp default ipv4-unicast
+   neighbor IPv4-UNDERLAY-PEERS peer group
+   neighbor IPv4-UNDERLAY-PEERS send-community
+   neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-OUT out
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
@@ -305,6 +351,9 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.0 remote-as 65000
+   neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -313,6 +362,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS activate
    !
    address-family ipv4
+      neighbor IPv4-UNDERLAY-PEERS activate
       no neighbor WAN-OVERLAY-PEERS activate
    !
    address-family ipv4 sr-te
@@ -338,6 +388,9 @@ router bgp 65000
       route-target import evpn 100:100
       route-target export evpn 100:100
       router-id 192.168.42.1
+      neighbor 172.17.0.0 remote-as 65000
+      neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.100_vrf_IT
       redistribute connected
    !
    vrf PROD
@@ -345,6 +398,9 @@ router bgp 65000
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.42.1
+      neighbor 172.17.0.0 remote-as 65000
+      neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.42_vrf_PROD
       redistribute connected
 !
 router traffic-engineering
