--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1634,19 +1634,12 @@ keys:
           default: 127
           description: Default PTP priority 1
         default_underlay_routing_protocol:
+          documentation_options:
+            table: node-type-keys
           type: str
           default: ebgp
           convert_to_lower_case: true
-          valid_values:
-          - ebgp
-          - ibgp
-          - ospf
-          - ospf-ldp
-          - isis
-          - isis-sr
-          - isis-ldp
-          - isis-sr-ldp
-          - none
+          $ref: eos_designs#/keys/underlay_routing_protocol
           description: 'Set the default underlay routing_protocol.
 
             Can be overridden by setting "underlay_routing_protocol" host/group_vars.
@@ -3421,17 +3414,20 @@ keys:
     type: str
     convert_to_lower_case: true
     description: "- The following underlay routing protocols are supported:\n  - EBGP
-      (default for l3ls-evpn)\n  - OSPF.\n  - ISIS.\n  - ISIS-SR*.\n  - ISIS-LDP*.\n
-      \ - ISIS-SR-LDP*.\n  - OSPF-LDP*.\n- The variables should be applied to all
-      devices in the fabric.\n*Only supported with core_interfaces data model.\n"
+      (default for l3ls-evpn)\n  - IBGP\n  - OSPF.\n  - ISIS.\n  - ISIS-SR*.\n  -
+      ISIS-LDP*.\n  - ISIS-SR-LDP*.\n  - OSPF-LDP*.\n  - No underlay routing protocol
+      (none)\n- The variables should be applied to all devices in the fabric.\n*Only
+      supported with core_interfaces data model.\n"
     valid_values:
     - ebgp
+    - ibgp
     - ospf
     - isis
     - isis-sr
     - isis-ldp
     - isis-sr-ldp
     - ospf-ldp
+    - none
   uplink_ptp:
     documentation_options:
       table: fabric-settings
