--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/node_type_keys.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/node_type_keys.schema.yml
@@ -43,19 +43,12 @@ keys:
           default: 127
           description: Default PTP priority 1
         default_underlay_routing_protocol:
+          documentation_options:
+            table: node-type-keys
           type: str
           default: "ebgp"
           convert_to_lower_case: true
-          valid_values:
-            - "ebgp"
-            - "ibgp"
-            - "ospf"
-            - "ospf-ldp"
-            - "isis"
-            - "isis-sr"
-            - "isis-ldp"
-            - "isis-sr-ldp"
-            - "none"
+          $ref: "eos_designs#/keys/underlay_routing_protocol"
           description: |
             Set the default underlay routing_protocol.
             Can be overridden by setting "underlay_routing_protocol" host/group_vars.
