--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
@@ -110,7 +110,6 @@ router path-selection
    tcp mss ceiling ipv4 ingress
    !
    path-group Equinix id 103
-      ipsec profile CP-PROFILE
    !
    path-group INET id 101
       ipsec profile CP-PROFILE
@@ -126,12 +125,10 @@ router path-selection
          ipv4 address 10.9.9.9
    !
    path-group LTE id 102
-      ipsec profile CP-PROFILE
    !
    path-group MPLS id 100
    !
    path-group Satellite id 104
-      ipsec profile CP-PROFILE
    !
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
@@ -282,6 +279,11 @@ router bgp 65000
    bgp cluster-id 192.168.44.2
    bgp listen range 192.168.142.0/24 peer-group WAN-OVERLAY-PEERS remote-as 65000
    bgp listen range 192.168.143.0/24 peer-group WAN-OVERLAY-PEERS remote-as 65000
+   neighbor IPv4-UNDERLAY-PEERS peer group
+   neighbor IPv4-UNDERLAY-PEERS send-community
+   neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-OUT out
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
@@ -308,6 +310,7 @@ router bgp 65000
       next-hop resolution disabled
    !
    address-family ipv4
+      neighbor IPv4-UNDERLAY-PEERS activate
       no neighbor WAN-OVERLAY-PEERS activate
       no neighbor WAN-RR-OVERLAY-PEERS activate
    !
