--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
@@ -16,6 +16,8 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
+ip as-path access-list AP-WAN permit 65000 any
+!
 hostname cv-pathfinder-transit
 !
 router adaptive-virtual-topology
@@ -184,9 +186,6 @@ vrf instance TRANSIT
 !
 ip security
    !
-   ike policy DP-IKE-POLICY
-      local-id 192.168.143.1
-   !
    ike policy CP-IKE-POLICY
       local-id 192.168.143.1
    !
@@ -199,7 +198,6 @@ ip security
       pfs dh-group 14
    !
    profile DP-PROFILE
-      ike-policy DP-IKE-POLICY
       sa-policy DP-SA-POLICY
       connection start
       shared-key 7 ABCDEF1234567890666
@@ -306,14 +304,33 @@ no ip routing vrf MGMT
 ip routing vrf PROD
 ip routing vrf TRANSIT
 !
+ip extcommunity-list ECL-WAN-HA-SOO permit soo 192.168.43.1:422
+!
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.43.0/24 eq 32
 !
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny prefixes from WAN
+   match as-path AP-WAN
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Mark prefixes originated from the LAN
+   set extcommunity soo 192.168.43.1:422 additive
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+   description Advertise towards LAN the routes received locally
+   match extcommunity soo 192.168.43.1:422 additive
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
+   description Advertise towards LAN the routes received over WAN
+   match as-path AP-WAN
+!
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+   set extcommunity soo 192.168.43.1:422 additive
 !
-route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 30
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
+   match extcommunity soo 192.168.43.1:422 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -323,6 +340,11 @@ router bgp 65000
    maximum-paths 16
    update wait-install
    no bgp default ipv4-unicast
+   neighbor IPv4-UNDERLAY-PEERS peer group
+   neighbor IPv4-UNDERLAY-PEERS send-community
+   neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-OUT out
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
@@ -338,6 +360,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS activate
    !
    address-family ipv4
+      neighbor IPv4-UNDERLAY-PEERS activate
       no neighbor WAN-OVERLAY-PEERS activate
    !
    address-family ipv4 sr-te
