--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit.yml
@@ -10,10 +10,13 @@ router_bgp:
     paths: 16
   updates:
     wait_install: true
-  redistribute_routes:
-  - source_protocol: connected
-    route_map: RM-CONN-2-BGP
   peer_groups:
+  - name: IPv4-UNDERLAY-PEERS
+    type: ipv4
+    maximum_routes: 12000
+    send_community: all
+    route_map_in: RM-BGP-UNDERLAY-PEERS-IN
+    route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
   - name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -22,14 +25,19 @@ router_bgp:
     send_community: all
     maximum_routes: 0
     remote_as: '65000'
+  address_family_ipv4:
+    peer_groups:
+    - name: IPv4-UNDERLAY-PEERS
+      activate: true
+    - name: WAN-OVERLAY-PEERS
+      activate: false
+  redistribute_routes:
+  - source_protocol: connected
+    route_map: RM-CONN-2-BGP
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
       activate: true
-  address_family_ipv4:
-    peer_groups:
-    - name: WAN-OVERLAY-PEERS
-      activate: false
   address_family_ipv4_sr_te:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -166,6 +174,17 @@ loopback_interfaces:
   description: Router_ID
   shutdown: false
   ip_address: 192.168.43.1/32
+as_path:
+  access_lists:
+  - name: AP-WAN
+    entries:
+    - type: permit
+      match: '65000'
+ip_extcommunity_lists:
+- name: ECL-WAN-HA-SOO
+  entries:
+  - type: permit
+    extcommunities: soo 192.168.43.1:422
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
@@ -178,12 +197,38 @@ route_maps:
     type: permit
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-- name: RM-EVPN-EXPORT-VRF-DEFAULT
+    set:
+    - extcommunity soo 192.168.43.1:422 additive
+- name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
+  - sequence: 20
+    type: deny
+    description: Deny prefixes from WAN
+    match:
+    - as-path AP-WAN
   - sequence: 30
     type: permit
+    description: Mark prefixes originated from the LAN
+    set:
+    - extcommunity soo 192.168.43.1:422 additive
+- name: RM-BGP-UNDERLAY-PEERS-OUT
+  sequence_numbers:
+  - sequence: 20
+    type: permit
+    description: Advertise towards LAN the routes received locally
     match:
-    - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+    - extcommunity soo 192.168.43.1:422 additive
+  - sequence: 30
+    type: permit
+    description: Advertise towards LAN the routes received over WAN
+    match:
+    - as-path AP-WAN
+- name: RM-EVPN-EXPORT-VRF-DEFAULT
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    match:
+    - extcommunity soo 192.168.43.1:422 additive
 flow_tracking:
   hardware:
     trackers:
@@ -200,8 +245,6 @@ flow_tracking:
     shutdown: false
 ip_security:
   ike_policies:
-  - name: DP-IKE-POLICY
-    local_id: 192.168.143.1
   - name: CP-IKE-POLICY
     local_id: 192.168.143.1
   sa_policies:
@@ -215,7 +258,6 @@ ip_security:
     pfs_dh_group: 14
   profiles:
   - name: DP-PROFILE
-    ike_policy: DP-IKE-POLICY
     sa_policy: DP-SA-POLICY
     connection: start
     shared_key: ABCDEF1234567890666
