--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_routing_protocol.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_routing_protocol.schema.yml
@@ -14,19 +14,23 @@ keys:
     description: |
       - The following underlay routing protocols are supported:
         - EBGP (default for l3ls-evpn)
+        - IBGP
         - OSPF.
         - ISIS.
         - ISIS-SR*.
         - ISIS-LDP*.
         - ISIS-SR-LDP*.
         - OSPF-LDP*.
+        - No underlay routing protocol (none)
       - The variables should be applied to all devices in the fabric.
       *Only supported with core_interfaces data model.
     valid_values:
       - "ebgp"
+      - "ibgp"
       - "ospf"
       - "isis"
       - "isis-sr"
       - "isis-ldp"
       - "isis-sr-ldp"
       - "ospf-ldp"
+      - "none"
