Fix: Change route-maps post lab testing

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
@@ -189,7 +189,7 @@ route-map RM-CONN-2-BGP permit 10
    set extcommunity soo 192.168.42.1:511 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
-   match extcommunity soo 192.168.42.1:511 additive
+   match extcommunity ECL-WAN-HA-SOO
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
