--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
@@ -317,20 +317,20 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
    description Mark prefixes originated from the LAN
    set extcommunity soo 192.168.43.1:422 additive
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
-   description Advertise towards LAN the routes received locally
-   match extcommunity soo 192.168.43.1:422 additive
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
+   description Advertise local routes towards LAN
+   match extcommunity ECL-WAN-HA-SOO
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
-   description Advertise towards LAN the routes received over WAN
-   match as-path AP-WAN
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+   description Advertise routes received from WAN towards LAN
+   match route-type internal
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.43.1:422 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
-   match extcommunity soo 192.168.43.1:422 additive
+   match extcommunity ECL-WAN-HA-SOO
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
