--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-default-policy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-default-policy.yml
@@ -165,7 +165,7 @@ route_maps:
   - sequence: 10
     type: permit
     match:
-    - extcommunity soo 192.168.42.1:511 additive
+    - extcommunity ECL-WAN-HA-SOO
 flow_tracking:
   hardware:
     trackers:
