Refactor: Address PR comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -16,7 +16,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-ip as-path access-list AP-WAN permit 65000 any
+ip as-path access-list ASPATH-WAN permit 65000 any
 !
 hostname cv-pathfinder-edge-no-common-path-group
 !
@@ -261,7 +261,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
    description Deny prefixes from WAN
-   match as-path AP-WAN
+   match as-path ASPATH-WAN
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
    description Mark prefixes originated from the LAN
