--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit.yml
@@ -176,7 +176,7 @@ loopback_interfaces:
   ip_address: 192.168.43.1/32
 as_path:
   access_lists:
-  - name: AP-WAN
+  - name: ASPATH-WAN
     entries:
     - type: permit
       match: '65000'
@@ -205,7 +205,7 @@ route_maps:
     type: deny
     description: Deny prefixes from WAN
     match:
-    - as-path AP-WAN
+    - as-path ASPATH-WAN
   - sequence: 30
     type: permit
     description: Mark prefixes originated from the LAN
