Feat(eos_cli_config_gen): Add support for flow parallelization encapsulation udp

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
@@ -44,6 +44,13 @@ ip security
       shared-key 7 1231231231321AA
       mode tunnel
    !
+   profile Profile-3
+      sa-policy SA-3
+      connection start
+      shared-key 7 1231231231321AA
+      flow parallelization encapsulation udp
+      mode tunnel
+   !
    key controller
       profile Profile-1
    hardware encryption disabled
