--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ip-security.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ip-security.yml
@@ -38,6 +38,14 @@ ip_security:
       connection: start
       # Need real one
       shared_key: 1231231231321AA
+      flow_parallelization_encapsulation_udp: false
+      mode: tunnel
+    - name: Profile-3
+      sa_policy: SA-3
+      connection: start
+      # Need real one
+      shared_key: 1231231231321AA
+      flow_parallelization_encapsulation_udp: true
       mode: tunnel
   key_controller:
     profile: Profile-1
