--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -4424,6 +4424,12 @@ keys:
               valid_values:
               - transport
               - tunnel
+            flow_parallelization_encapsulation_udp:
+              type: bool
+              description: 'Enable flow parallelization.
+
+                When enabled, multiple cores are used to parallelize the IPsec encryption
+                and decryption processing.'
       key_controller:
         type: dict
         keys:
