--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -36,7 +36,7 @@ $defs:
         dhcp_accept_default_route:
           type: bool
           default: false
-          description: Accept a default route from DHCP if `ip` is `dhcp`.
+          description: Accept a default route from DHCP if `ip_address` is set to `dhcp`.
         enabled:
           type: bool
           default: true
