--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-spine2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-spine2-catalog.yml
@@ -129,6 +129,42 @@ anta.tests.interfaces:
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
+    - afi: evpn
+      peers:
+      - 10.255.0.3
+    result_overwrite:
+      categories:
+      - BGP
+      custom_field: 'BGP EVPN Peer: 10.255.0.3'
+- VerifyBGPSpecificPeers:
+    address_families:
+    - afi: evpn
+      peers:
+      - 10.255.0.4
+    result_overwrite:
+      categories:
+      - BGP
+      custom_field: 'BGP EVPN Peer: 10.255.0.4'
+- VerifyBGPSpecificPeers:
+    address_families:
+    - afi: evpn
+      peers:
+      - 10.255.0.5
+    result_overwrite:
+      categories:
+      - BGP
+      custom_field: 'BGP EVPN Peer: 10.255.0.5'
+- VerifyBGPSpecificPeers:
+    address_families:
+    - afi: evpn
+      peers:
+      - 142.112.41.2
+    result_overwrite:
+      categories:
+      - BGP
+      custom_field: 'BGP EVPN Peer: 142.112.41.2'
+- VerifyBGPSpecificPeers:
+    address_families:
     - afi: ipv4
       peers:
       - 10.255.255.3
@@ -136,8 +172,7 @@ anta.tests.routing.bgp:
     result_overwrite:
       categories:
       - BGP
-      custom_field: 'bgp_neighbor: 10.255.255.3'
-      description: ip bgp peer state established (ipv4)
+      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.3'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -147,8 +182,7 @@ anta.tests.routing.bgp:
     result_overwrite:
       categories:
       - BGP
-      custom_field: 'bgp_neighbor: 10.255.255.7'
-      description: ip bgp peer state established (ipv4)
+      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.7'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -158,46 +192,35 @@ anta.tests.routing.bgp:
     result_overwrite:
       categories:
       - BGP
-      custom_field: 'bgp_neighbor: 10.255.255.11'
-      description: ip bgp peer state established (ipv4)
+      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.11'
 - VerifyBGPSpecificPeers:
     address_families:
-    - afi: evpn
+    - afi: ipv4
       peers:
-      - 10.255.0.3
+      - 142.112.39.2
+      safi: unicast
     result_overwrite:
       categories:
       - BGP
-      custom_field: 'bgp_neighbor: 10.255.0.3'
-      description: bgp evpn peer state established (evpn)
+      custom_field: 'BGP IPv4 Unicast Peer: 142.112.39.2'
 - VerifyBGPSpecificPeers:
     address_families:
-    - afi: evpn
+    - afi: ipv6
       peers:
-      - 10.255.0.4
+      - 2001:db8:1::2
+      safi: unicast
     result_overwrite:
       categories:
       - BGP
-      custom_field: 'bgp_neighbor: 10.255.0.4'
-      description: bgp evpn peer state established (evpn)
-- VerifyBGPSpecificPeers:
-    address_families:
-    - afi: evpn
-      peers:
-      - 10.255.0.5
-    result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'bgp_neighbor: 10.255.0.5'
-      description: bgp evpn peer state established (evpn)
+      custom_field: 'BGP IPv6 Unicast Peer: 2001:db8:1::2'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
     result_overwrite:
       categories:
       - BGP
-      custom_field: ArBGP
-      description: ArBGP is configured and operating
+      custom_field: 'Routing protocol model: multi-agent'
+      description: Verifies the configured routing protocol model.
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
