Feat(eos_cli_conifg_gen): Re-factor the model for next-hop mpls ribs

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
@@ -38,10 +38,10 @@ router_bgp:
       peer_group: EVPN-OVERLAY-PEERS
   address_family_evpn:
     next_hop_mpls_resolution_ribs:
-      - type: "tunnel-rib-colored"
-      - type: "tunnel-rib"
+      - rib_type: "tunnel-rib-colored"
+      - rib_type: "tunnel-rib"
         rib_name: "test-rib"
-      - type: "system-connected"
+      - rib_type: "system-connected"
     neighbor_default:
       encapsulation: mpls
       next_hop_self_source_interface: Loopback0
