--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10032,18 +10032,23 @@ keys:
                     type: bool
           next_hop_mpls_resolution_ribs:
             type: list
+            min_length: 1
+            max_length: 3
+            description: Specify the RIBs used to resolve MPLS next-hops. The order
+              of this list determines the order of RIB lookups.
             items:
               type: dict
               keys:
-                type:
+                rib_type:
                   type: str
                   required: true
                   valid_values:
                   - system-connected
                   - tunnel-rib-colored
                   - tunnel-rib
-                  description: Type of RIB. For 'tunnel-rib', use 'rib_name' to specify
-                    the name of the Tunnel-RIB to use.
+                  description: Type of RIB, one of system-connect|tunnel-rib-colored|tunnel-rib.
+                    For 'tunnel-rib', use 'rib_name' to specify the name of the Tunnel-RIB
+                    to use. Use 'tunnel-rib-colored' for 'tunnel-rib colored system-colored-tunnel-rib'
                 rib_name:
                   type: str
                   description: The name of the tunnel-rib to use when using 'tunnel-rib'
