--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -143,6 +143,7 @@ ethernet_interfaces:
       ipv4:
         dr_priority: 200
         sparse_mode: true
+        border_router: true
     isis_enable: ISIS_TEST
     isis_passive: false
     isis_metric: 99
