Almost ready for pull request

--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/ENDPOINT_CONNECT.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/ENDPOINT_CONNECT.yml
@@ -2,8 +2,7 @@
 servers:
   - name: host1
     adapters:
-      - endpoint_ports: [ Ethernet1, Ethernet2 ]
-        switch_ports: [ Ethernet7, Ethernet7 ]
+      - switch_ports: [ Ethernet7, Ethernet7 ]
         switches: [ leaf1, leaf2 ]
         vlans: 10
         mode: access
@@ -11,4 +10,13 @@ servers:
         port_channel:
           description: PortChannel host1
           mode: active
-
+  - name: host2
+    adapters:
+      - switch_ports: [ Ethernet7, Ethernet7 ]
+        switches: [ leaf3, leaf3 ]
+        vlans: 20
+        mode: access
+        spanning_tree_portfast: edge
+        port_channel:
+          description: PortChannel host2
+          mode: active
