--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/POD1.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/POD1.yml
@@ -6,23 +6,20 @@ spine:
     bgp_as: 65001
     loopback_ipv4_pool: 192.168.101.0/24
     mlag: false
-    uplink_switches: [borderleaf1, borderleaf2] # Where the leaf uplinks go
+    uplink_switches: [superspine1, superspine2] # Where the leaf uplinks go
     uplink_ipv4_pool: 192.168.103.0/24 # For the p2p interfaces to chopped up into /31s
     uplink_interfaces: [Ethernet7, Ethernet8] # Spine uplinks
-
-
   nodes:
     spine1:
       id: 11
       mgmt_ip: 192.168.0.11/24
       uplink_switch_interfaces: [Ethernet3, Ethernet3]
-      evpn_route_servers: [borderleaf1, borderleaf2]
-
+      evpn_route_servers: [superspine1, superspine2]
     spine2:
       id: 12
       mgmt_ip: 192.168.0.12/24
       uplink_switch_interfaces: [Ethernet4, Ethernet4]
-      evpn_route_servers: [borderleaf1, borderleaf2]
+      evpn_route_servers: [superspine1, superspine2]
 
 
 
