--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/POD2.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/POD2.yml
@@ -6,22 +6,20 @@ spine:
     bgp_as: 65002
     loopback_ipv4_pool: 192.168.101.0/24
     mlag: false
-    uplink_switches: [borderleaf1, borderleaf2] # Where the leaf uplinks go
+    uplink_switches: [superspine1, superspine2] # Where the leaf uplinks go
     uplink_ipv4_pool: 192.168.103.0/24 # For the p2p interfaces to chopped up into /31s
     uplink_interfaces: [Ethernet7, Ethernet8] # Spine uplinks
   nodes:
     spine3:
       id: 13
       mgmt_ip: 192.168.0.13/24
-      evpn_route_servers: [borderleaf1, borderleaf2]
       uplink_switch_interfaces: [Ethernet5, Ethernet5]
-
-
+      evpn_route_servers: [superspine1, superspine2]
     spine4:
       id: 14
       mgmt_ip: 192.168.0.14/24
-      evpn_route_servers: [borderleaf1, borderleaf2]
       uplink_switch_interfaces: [Ethernet6, Ethernet6]
+      evpn_route_servers: [superspine1, superspine2]
 
 
 
